--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
+    <meta name="description" content="Creative Web Studio based in London. Bespoke Websites, Apps, and Systems. Make Web FUn Again.">
     %sveltekit.head%
   </head>
   <body>
