--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1"
     />
-    <meta name="description" content="Creative Web Studio based in London. Bespoke Websites, Apps, and Systems. Lightweight and 3d Specialist. MAKE WEB FUN AGAIN.">
+    <meta name="description" content="MAKE WEB FUN AGAIN.">
     %sveltekit.head%
   </head>
   <body>
